# compilers-course

./: .clang-format  .gitignore  CMakeLists.txt
app/: CMakeLists.txt
src/: CMakeLists.txt
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
tests/: CMakeLists.txt  lexer_tests.cpp
